Featured Works Tablet: Fixed spacing

--- a/src/UI/ImageGallery.module.css
+++ b/src/UI/ImageGallery.module.css
@@ -10,7 +10,13 @@
 }
 
 @media (min-width: 768px) {
+  .container {
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+  }
+
   .img {
-    width: 28.5vw;
+    width: 28vw;
+    padding: 0;
   }
 }
